--- a/SpringBootJdbcTest/src/main/resources/application.properties
+++ b/SpringBootJdbcTest/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:sqlite:C:/data/rcnov2021/userdb.db
-spring.datasource.driver-class-name=org.sqlite.JDBC
+xxxspring.datasource.url=jdbc:sqlite:C:/data/rcnov2021/userdb.db
+xxxspring.datasource.driver-class-name=org.sqlite.JDBC
 rc.authorname=Aidan
